Added version and updated to newest versions

--- a/face_server.conf
+++ b/face_server.conf
@@ -1,5 +1,6 @@
 description     "Face Recognition server"
 author          "AMS"
+version         "1.0"
 
 start on (local-filesystems and net-device-up IFACE!=lo)
 
